# mav_fcs

./: CMakeLists.txt  README.md  package.xml
include/mav_fcs/: copter_interface.h  fcs_interface.h  fcs_processor.h  fcs_state_machine.h  inspect_ctrl.h  path_tracking_control.h  speed_control.h
launch/: fcs_dji_m600.launch  fcs_dji_matrice.launch  fcs_dji_matrice_demo.launch  fcs_dji_matrice_demo_sim.launch  publish_static_trajectory.launch
src/: copter_interface.cpp  copter_interface_simulator.cpp  fcs_interface.cpp  fcs_node.cpp  fcs_processor.cpp  fcs_state_machine.cpp  hw_status.py  inspect_ctrl.cpp  path_tracking_control.cpp  pub_hw_status_node.py  speed_control.cpp
test/: dji_sim_node.py  pub_path.py  pub_usercmd.py  pub_usercmd_takeoff.py  pub_waypoints.py  test_speed_control.cpp  test_speed_control.launch
test_files/: traj_cmd_east.bagy  traj_cmd_north.bagy  traj_cmd_north_east.bagy  traj_cmd_north_west.bagy  traj_cmd_south.bagy  traj_cmd_south_east.bagy  traj_cmd_south_west.bagy  traj_cmd_west.bagy  uploadTrajCmd.sh
